<resources>
    <string name="app_name">MOIN</string>
    <string name="enter_app">开始体验</string>
    <string name="nq_md_drawerOpenIndicatorDesc">关闭</string>
    <string name="nq_md_drawerClosedIndicatorDesc">打开</string>
    <string name="no_network">无网络连接</string>
    <string name="label_no_sdcard">没有SD卡</string>
    <string name="loading2">加载中</string>
    <string name="load_error">加载失败</string>
    <string name="label_download">下载</string>
    <string name="loading">加载中</string>
    <string name="tap_load">点击屏幕，重新加载</string>
    <string name="connection_failed">联网失败，请稍后重试</string>
    <string name="list_end">已全部加载</string>
    <string name="tab_to_reload">轻触屏幕重新加载</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_succ">反馈成功!</string>
    <string name="feedback_contract_hint">为了方便反馈给您信息,请留下联系方式。</string>
    <string name="feedback_hint">为了更好地服务于您，请详细描述问题步骤哦,3Q:)</string>
    <string name="feedback_empty">请填写反馈内容</string>
    <string name="over_length_limit">输入已达上限</string>
    <string name="feedback_confirm">请及时提交您的反馈</string>
    <string name="summit">提交反馈</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开立即刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="install_app_tip">下载完成，点击安装。</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="sure">确定</string>
    <string name="regist">注册</string>
    <string name="regist_byphone">手机注册</string>
    <string name="regist_byemail">邮箱注册</string>
    <string name="regist_phone_hint">请输入您的手机号</string>
    <string name="regist_email_hint">请输入您的邮箱地址</string>
    <string name="regist_phone_captcha_hint">请输入您手机短信中的验证码</string>
    <string name="regist_email_captcha_hint">请输入您邮箱中的验证码</string>
    <string name="regist_password_hint">请输入您的密码</string>
    <string name="regist_password_tip">密码由6-16位字母、数字或符号组合</string>
    <string name="regist_password_digits">1234567890,.+-*/_=%[]{}\|~`!@#$^()?abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="regist_btn">注      册</string>
    <string name="regist_you_agree">注册即表示您同意</string>
    <string name="regist_agreement">《MOIN服务协议》</string>
    <string name="regist_resend">秒后重发</string>
    <string name="regist_mobile_existed">该手机号已存在，请重新输入</string>
    <string name="regist_email_existed">该邮箱已存在，请重新输入</string>
    <string name="regist_get_verify_code_fail">获取验证码失败，请重新获取</string>
    <string name="regist_input_error">输入有误</string>
    <string name="regist_phone_null">手机号不能为空</string>
    <string name="regist_phone_format_err">手机号格式有误</string>
    <string name="regist_email_null">邮箱不能为空</string>
    <string name="regist_email_format_err">邮箱格式有误</string>
    <string name="regist_get_code">获取验证码</string>
    <string name="regist_failed">注册失败</string>
    <string name="regist_succress">注册成功</string>
    <string name="regist_verify_code_wrong">验证码有误</string>
    <string name="login">登录</string>
    <string name="login_btn">登      录</string>
    <string name="login_username_hint">请输入您的手机号或邮箱</string>
    <string name="login_third_party">合作账号登录</string>
    <string name="login_input_err">用户名或密码错误</string>
    <string name="login_failed">登录失败</string>
    <string name="retrieve_password">找回密码</string>
    <string name="retrieve_byphone">手机找回</string>
    <string name="retrieve_byemail">邮箱找回</string>
    <string name="retrieve_verify">验  证</string>
    <string name="retrieve_sure">确	认</string>
    <string name="retrieve_password_hint">请输入新密码</string>
    <string name="retrieve_password_sure_hint">请确认新密码</string>
    <string name="retrieve_phone_unregister">该手机号未注册或格式有误，请重新输入</string>
    <string name="retrieve_email_unregister">该邮箱未注册或格式有误，请重新输入</string>
    <string name="retrieve_err1">用户手机或者邮箱不存在</string>
    <string name="retrieve_err2">在另外一台设备上的登录被踢出</string>
    <string name="retrieve_err3">参数有误，数据保存失败</string>
    <string name="retrieve_err4">验证码错误</string>
    <string name="retrieve_err5">两次密码不一致，请重新输入</string>
    <string name="retrieve_phone_tip">请输入验证手机号</string>
    <string name="retrieve_email_tip">请输入验证邮箱</string>
    <string name="retrieve_fail">重置失败</string>
    <string name="retrieve_success">重置成功</string>
    <string name="information_title">个人信息</string>
    <string name="i_avatar">头像</string>
    <string name="i_nickname">昵称</string>
    <string name="i_age">年代</string>
    <string name="i_gender">性别</string>
    <string name="i_zodiac">星座</string>
    <string name="i_location">地区</string>
    <string name="i_signature">个性签名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown_gender"></string>
    <string name="invalid_nickname">无效的昵称</string>
    <string name="i_age_70">70后</string>
    <string name="i_age_80">80后</string>
    <string name="i_age_85">85后</string>
    <string name="i_age_90">90后</string>
    <string name="i_age_95">95后</string>
    <string name="i_age_00">00后</string>
    <string name="i_age_05">05后</string>
    <string name="i_age_extension">后</string>
    <string name="s_emoji">从表情选择</string>
    <string name="s_album">从手机相册选择</string>
    <string name="save">保存</string>
    <string name="auto_locate">定位城市</string>
    <string name="hot_city">热门城市</string>
    <string name="all_city">城市列表</string>
    <string name="select_city">城市选择</string>
    <string name="nickname_len_tip">昵称长度限制为16个字符</string>
    <string name="zodiac_name1">水瓶座</string>
    <string name="zodiac_date1">01月20日-02月18日</string>
    <string name="zodiac_name2">双鱼座</string>
    <string name="zodiac_date2">02月19日-03月20日</string>
    <string name="zodiac_name3">白羊座</string>
    <string name="zodiac_date3">03月21日-04月19日</string>
    <string name="zodiac_name4">金牛座</string>
    <string name="zodiac_date4">04月20日-05月20日</string>
    <string name="zodiac_name5">双子座</string>
    <string name="zodiac_date5">05月21日-06月21日</string>
    <string name="zodiac_name6">巨蟹座</string>
    <string name="zodiac_date6">06月22日-07月22日</string>
    <string name="zodiac_name7">狮子座</string>
    <string name="zodiac_date7">07月23日-08月22日</string>
    <string name="zodiac_name8">处女座</string>
    <string name="zodiac_date8">08月23日-09月22日</string>
    <string name="zodiac_name9">天秤座</string>
    <string name="zodiac_date9">09月23日-10月23日</string>
    <string name="zodiac_name10">天蝎座</string>
    <string name="zodiac_date10">10月24日-11月22日</string>
    <string name="zodiac_name11">射手座</string>
    <string name="zodiac_date11">11月23日-12月21日</string>
    <string name="zodiac_name12">摩羯座</string>
    <string name="zodiac_date12">12月22日-01月19日</string>
    <string name="tab_moin">首页</string>
    <string name="tab_wasai">表情</string>
    <string name="tab_wowo">窝窝</string>
    <string name="tab_mine">我的</string>
    <string name="tab_cosplay">大咖秀</string>
    <string name="ip_type_movie">电影</string>
    <string name="ip_type_tv">电视剧</string>
    <string name="ip_type_variety_show">综艺</string>
    <string name="ip_homep_zmoin">正在热IN</string>
    <string name="ip_homep_zhotest">即将上IN</string>
    <string name="ip_homep_wowotop">最热窝窝</string>
    <string name="ip_homep_all">全部 ></string>
    <string name="ip_homep_ipname">电影名称</string>
    <string name="ip_homep_type">电影/2015.05.01</string>
    <string name="ip_list">列表</string>
    <string name="ip_clip">片花和剧照</string>
    <string name="ip_collection">收藏</string>
    <string name="ip_collectioned">已收藏</string>
    <string name="ip_comment">评论</string>
    <string name="ip_share">分享</string>
    <string name="ip_type">类型:</string>
    <string name="ip_length">时长:</string>
    <string name="ip_location">地区:</string>
    <string name="ip_language">语言:</string>
    <string name="ip_banquan">平台:</string>
    <string name="ip_showdate">上IN:</string>
    <string name="ip_emoji">表情</string>
    <string name="ip_detail">详情</string>
    <string name="ip_more">更多 ></string>
    <string name="ip_director">导演:</string>
    <string name="ip_main_actor">主演:</string>
    <string name="ip_tag">标签:</string>
    <string name="ip_actor">演员:</string>
    <string name="ip_author">帖子作者</string>
    <string name="ip_banzhu">版主</string>
    <string name="ip_time">发布时间</string>
    <string name="ip_tz_title">标题</string>
    <string name="ip_tz_desc">内容</string>
    <string name="ip_download_ok">已保存到 %1$s 文件夹</string>
    <string name="show_all_words">展开更多台词</string>
    <string name="in_production">敬请期待</string>
    <string name="wasai_qx_name">七星鲁王宫</string>
    <string name="wasai_zhz_name">种汉子</string>
    <string name="search">搜索</string>
    <string name="wasai_search_ip_hint">请输入关键词</string>
    <string name="search_history">搜索历史</string>
    <string name="search_failed">T_T 臣妾搜不到啊！</string>
    <string name="hot_tag">热门标签</string>
    <string name="invalid_search">请输入搜索关键词</string>
    <string name="all_post">全部帖</string>
    <string name="boutique_post">精品帖</string>
    <string name="wowo_tz_detail">帖子详情</string>
    <string name="wowo_tag">标签</string>
    <string name="wowo_huifu">回复</string>
    <string name="wowo_longpic">长图</string>
    <string name="wowo_post">发帖</string>
    <string name="wowo_post_title_hint">写个吸引人的标题。 (必填)</string>
    <string name="wowo_post_content_hint">好的内容可能会被推荐哦。(必填)</string>
    <string name="wowo_post_tag_hint">标签 (必填)</string>
    <string name="wowo_photos">手机相册</string>
    <string name="all_photo">所有图片</string>
    <string name="photo">图片</string>
    <string name="no_photo">擦，一张图片没扫描到</string>
    <string name="select_ok">完成</string>
    <string name="clear">清除</string>
    <string name="select_photo">选择图片</string>
    <string name="camera">拍照</string>
    <string name="select_photo_warning">最多选择%1$d张图片</string>
    <string name="posting_toast">正在发帖ing</string>
    <string name="post_title_hint">标题不能为空</string>
    <string name="reply_hint">内容不能为空</string>
    <string name="reply_post_author">回复楼主:</string>
    <string name="comment_floor">第%1$d楼</string>
    <string name="reply_referral_floor">回复第%1$d楼:</string>
    <string name="reply_referral_nickname">回复%1$s:</string>
    <string name="reply_failed_toast">回复失败</string>
    <string name="post_tag_hint">标签不能为空</string>
    <string name="post_content_hint">内容，表情和图片三者至少填一项</string>
    <string name="banzhu">版主</string>
    <string name="hours_before">小时前</string>
    <string name="minutes_before">分钟前</string>
    <string name="just_before">刚刚</string>
    <string name="reply_success">回帖成功</string>
    <string name="post_success">发帖成功</string>
    <string name="delete">删除</string>
    <string name="cosplay_make">制作一个</string>
    <string name="click_too_fast">少年郎，别心急</string>
    <string name="richkeyboard_refer">"@"</string>
    <string name="richkeyboard_topic">#</string>
    <string name="faceeditext_hint">say something!</string>
    <string name="chat">聊天</string>
    <string name="focus_ip">我的收藏</string>
    <string name="setting">设置</string>
    <string name="account_security">账户安全</string>
    <string name="about_moin">关于MOIN</string>
    <string name="about_intro">MOIN 在一起 正青春</string>
    <string name="rules">服务条款</string>
    <string name="contact">官方微信</string>
    <string name="technology">技术团队</string>
    <string name="copyright">Copyright 20XX-2015 MOIN. Allrights Reserved</string>
    <string name="new_password1">新密码</string>
    <string name="new_password2">确认新密码</string>
    <string name="good">好评</string>
    <string name="bad">吐槽</string>
    <string name="feedback_bad">意见反馈-吐槽</string>
    <string name="logout">退出登录</string>
</resources>