<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/common_title_grey">

    <include layout="@layout/ic_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/common_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_bar_height"
        android:layout_marginTop="@dimen/margin_bigger"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/common_white"
        android:layout_marginLeft="@dimen/header_padding_left"
        android:layout_marginRight="@dimen/header_padding_right">

        <TextView android:text="@string/new_password1"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            style="@style/common_text_title" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:digits="@string/regist_password_digits"
            android:hint="@string/retrieve_password_hint"
            android:maxLength="@integer/password_max_len"
            android:singleLine="true"
            android:textColor="@color/common_text_grey"
            android:textSize="@dimen/common_title_size"
            android:layout_marginLeft="@dimen/margin_normal" />

    </LinearLayout>


    <!--password2 edittext-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_bar_height"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@color/common_white"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="@dimen/header_padding_left"
        android:layout_marginRight="@dimen/header_padding_right">


        <TextView
            style="@style/common_text_title"
            android:text="@string/new_password2"
            android:layout_width="82dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/register_code_img"
            android:background="@null"
            android:digits="@string/regist_password_digits"
            android:hint="@string/retrieve_password_sure_hint"
            android:maxLength="@integer/password_max_len"
            android:singleLine="true"
            android:textColor="@color/common_text_grey"
            android:textSize="@dimen/common_title_size"
            android:layout_marginLeft="@dimen/margin_normal" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:clickable="true"
        android:gravity="right"
        android:text="@string/regist_password_tip"
        android:textColor="@color/common_text_grey"
        android:textSize="10sp"
        android:layout_marginRight="@dimen/header_padding_right"
        android:layout_marginLeft="@dimen/header_padding_left" />

    <TextView
        android:id="@+id/change_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/header_padding_left"
        android:layout_marginRight="@dimen/header_padding_right"
        android:layout_marginTop="@dimen/margin_bigger"
        android:background="@drawable/button_solid"
        android:clickable="true"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/retrieve_sure"
        android:textColor="@color/common_white"
        android:textSize="@dimen/common_title_size" />
    </LinearLayout>

</LinearLayout>