<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/common_white">

    <TextView
        style="@style/common_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_age"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_normal"
        android:textColor="@color/common_text_grey" />

    <View style="@style/divide_line" />

    <!--05后-->
    <!--00后-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alter_age_00"
            style="@style/information_sex_popwindow_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/i_age_00" />

        <ImageView
            android:id="@+id/alter_age_00_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@drawable/icon_select_light"
            android:visibility="visible" />

        <View
            style="@style/divide_line"
            android:layout_below="@+id/alter_age_00"/>
    </RelativeLayout>
    <!--95后-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alter_age_95"
            style="@style/information_sex_popwindow_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/i_age_95" />

        <ImageView
            android:id="@+id/alter_age_95_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@drawable/icon_select_light"
            android:visibility="visible" />

        <View
            style="@style/divide_line"
            android:layout_below="@+id/alter_age_95"/>
    </RelativeLayout>
    <!--90后-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alter_age_90"
            style="@style/information_sex_popwindow_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/i_age_90" />

        <ImageView
            android:id="@+id/alter_age_90_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@drawable/icon_select_light"
            android:visibility="visible" />

        <View
            style="@style/divide_line"
            android:layout_below="@+id/alter_age_90"/>
    </RelativeLayout>

    <!--85后-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alter_age_85"
            style="@style/information_sex_popwindow_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/i_age_85" />

        <ImageView
            android:id="@+id/alter_age_85_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@drawable/icon_select_light"
            android:visibility="visible" />

        <View
            style="@style/divide_line"
            android:layout_below="@+id/alter_age_85"/>
    </RelativeLayout>
    <!--80后-->
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
        android:id="@+id/alter_age_80"
        style="@style/information_sex_popwindow_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/i_age_80" />

        <ImageView
        android:id="@+id/alter_age_80_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:src="@drawable/icon_select_light"
        android:visibility="visible" />

        <View
        style="@style/divide_line"
        android:layout_below="@+id/alter_age_80"/>
    </RelativeLayout>
    <!--70后-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alter_age_70"
            style="@style/information_sex_popwindow_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/i_age_70" />

        <ImageView
            android:id="@+id/alter_age_70_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:src="@drawable/icon_select_light"
            android:visibility="visible" />

        <View
            style="@style/divide_line"
            android:layout_below="@+id/alter_age_70"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/alter_age_cancel"
        style="@style/information_sex_popwindow_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@android:string/cancel" />

</LinearLayout>
