<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:background="@color/common_title_grey">

    <include
        android:id="@+id/ly_header"
        layout="@layout/ic_header" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/common_title_grey">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/ly_header"
        android:background="@color/common_white">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

    <com.moinapp.wuliao.commons.ui.ExpandableTextView
        android:id="@+id/shortcut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_logo"
        android:orientation="vertical"
        expandableTextView:animAlphaStart="1"
        expandableTextView:maxCollapsedLines="10"
        android:background="@color/common_white">


        <ImageButton
            android:id="@id/expand_collapse"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@android:color/transparent"
            android:visibility="gone" />
    </com.moinapp.wuliao.commons.ui.ExpandableTextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/about_tv"
                android:text="@string/rules" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/common_black" />

            <TextView
                style="@style/about_tv"
                android:text="@string/contact" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/common_black" />

            <TextView
                style="@style/about_tv"
                android:text="@string/technology" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>